# svarozhits

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  flake.nix  sqlx-data.json  styles.css  tailwind.config.js
.github/: dependabot.yml
.github/workflows/: automatic-rebase.yml  checks.yml  ci.yml  clippy.yml  docker.yml  flake-inputs.yml  pull-request.yml  pull_request.yml  security-audit.yml
assets/: svarozhits.css  svarozhits.min.css
migrations/: 20221021135647_tasks.sql
src/: errors.rs  main.rs  models.rs  routes.rs
templates/: base.html  index.html
templates/src/: base.html  index.html  internal_server_error.html  not_found.html  task.html
