[package]
name = "svarozhits"
version = "0.1.0"
authors = ["raroh73"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/raroh73/svarozhits"
license = "MIT"

[dependencies]
askama = { version = "0.11.0", git = "https://github.com/djc/askama", rev = "c441459", features = [
    "with-axum",
] }
askama_axum = { version = "0.1.0", git = "https://github.com/djc/askama", rev = "c441459" }
axum = "0.5.17"
mime_guess = "2.0.4"
rust-embed = "6.4.2"
serde = { version = "1.0.147", features = ["derive"] }
sqlx = { version = "0.6.2", features = [
    "offline",
    "runtime-tokio-rustls",
    "sqlite",
] }
tokio = { version = "1.21.2", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tower-http = { version = "0.3.0", features = [
    "catch-panic",
    "compression-gzip",
    "trace",
] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[profile.release]
strip = true
lto = true
codegen-units = 1
