[package]
name = "svarozhits"
version = "0.1.0"
authors = ["raroh73"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/raroh73/svarozhits"
license = "MIT"

[dependencies]
anyhow = "1.0.66"
askama = "0.11.1"
axum = "0.6.1"
hex = "0.4.3"
mime = "0.3.16"
mime_guess = "2.0.4"
rust-embed = "6.4.2"
serde = { version = "1.0.148", features = ["derive"] }
sqlx = { version = "0.6.2", features = [
    "offline",
    "runtime-tokio-rustls",
    "sqlite",
] }
tokio = { version = "1.23.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["compression-gzip", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[build-dependencies]
minify-html = "0.10.3"

[profile.release]
strip = true
lto = true
codegen-units = 1
